Added repo for entity operatiions

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /LtsParkingAppApi/.vs/LtsParkingAppApi/v15
+/LtsParkingAppApi/.vs/config
