--- a/LtsParkingAppApi/AppDomain/AppDomain.csproj
+++ b/LtsParkingAppApi/AppDomain/AppDomain.csproj
@@ -16,4 +16,8 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\Repositories\" />
+  </ItemGroup>
+
 </Project>
