--- a/LtsParkingAppApi/AppDomain/AppDomain.csproj
+++ b/LtsParkingAppApi/AppDomain/AppDomain.csproj
@@ -11,6 +11,7 @@
     <Compile Remove="Migrations\20180529160422_addedRestTables.cs" />
     <Compile Remove="Migrations\20180529160543_addedRestTables.cs" />
     <Compile Remove="Migrations\20180529162103_addedInitialMigrationForTables.cs" />
+    <Compile Remove="Migrations\20180530121013_removeNotMapped.cs" />
   </ItemGroup>
 
   <ItemGroup>
