--- a/LtsParkingAppApi/LtsParkingAppApi/Properties/launchSettings.json
+++ b/LtsParkingAppApi/LtsParkingAppApi/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56160/",
-      "sslPort": 0
+      "applicationUrl": "https://localhost:44391/",
+      "sslPort": 44391
     }
   },
   "profiles": {
