--- a/LtsParkingAppApi/LtsParkingAppApi/web.config
+++ b/LtsParkingAppApi/LtsParkingAppApi/web.config
@@ -6,7 +6,21 @@
   <system.webServer>
     <handlers>
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
+      <remove name="WebDAV" />
     </handlers>
+  <modules>
+        <remove name="WebDAVModule" />
+    </modules>
+     
+  
     <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false" />
   </system.webServer>
+<connectionStrings>
+  <add name="AppDbContext" 
+       connectionString="Server=BTFSTEST\\HACKATHON;Database=TeamB_Parking;Trusted_Connection=True;Integrated Security=SSPI;Persist Security Info=False;User Id=LTS\\hreddy;Password=Live123@!;MultipleActiveResultSets=true;" />
+<remove name="LocalSqlServer"/>
+</connectionStrings>
+  <system.web>
+    <authentication mode="Windows" />
+  </system.web>
 </configuration>
