--- a/LtsParkingAppApi/AppDomain/AppDomain.csproj
+++ b/LtsParkingAppApi/AppDomain/AppDomain.csproj
@@ -12,6 +12,7 @@
     <Compile Remove="Migrations\20180529160543_addedRestTables.cs" />
     <Compile Remove="Migrations\20180529162103_addedInitialMigrationForTables.cs" />
     <Compile Remove="Migrations\20180530121013_removeNotMapped.cs" />
+    <Compile Remove="Migrations\20180604181257_restructureDatabase.cs" />
   </ItemGroup>
 
   <ItemGroup>
