Added DI Service

--- a/LtsParkingAppApi/LtsParkingAppApi/appsettings.json
+++ b/LtsParkingAppApi/LtsParkingAppApi/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "AppDbContext": "Server=BTFSTEST\\HACKATHON;Database=TeamB_Parking;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AppDbContext": "Server=BTFSTEST\\HACKATHON;Database=TeamB_Parking;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "PublicAPI": {
     "InternalAccessToken": "4586E9EC-7CF1-4F9C-BFF4-3E626DEF9E4B"
