--- a/LtsParkingAppApi/LtsParkingAppApi/appsettings.json
+++ b/LtsParkingAppApi/LtsParkingAppApi/appsettings.json
@@ -1,16 +1,15 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=BTFSTEST\\HACKATHON;Database=TeamB_Parking;Trusted_Connection=True;MultipleActiveResultSets=true;",
+          "tableName": "Logs"
+        }
       }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
+    ]
   },
   "ConnectionStrings": {
     "AppDbContext": "Server=BTFSTEST\\HACKATHON;Database=TeamB_Parking;Trusted_Connection=True;MultipleActiveResultSets=true;"
