added email api

--- a/LtsParkingAppApi/LtsParkingAppApi/appsettings.json
+++ b/LtsParkingAppApi/LtsParkingAppApi/appsettings.json
@@ -16,5 +16,11 @@
   },
   "PublicAPI": {
     "InternalAccessToken": "4586E9EC-7CF1-4F9C-BFF4-3E626DEF9E4B"
+  },
+  "MailSettings": {
+    "SendGridApiKey": "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",
+    "AdminEmail": "hreddy@liventus.in,mkombiah@liventus.in",
+    "FromAlias":  "LTS-Parking"
   }
+
 }
