--- a/LtsParkingAppApi/AppServices/AppServices.csproj
+++ b/LtsParkingAppApi/AppServices/AppServices.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="5.1.1" />
+    <PackageReference Include="Sendgrid" Version="9.9.0" />
   </ItemGroup>
 
   <ItemGroup>
